Fix content overflow into footer

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,6 @@
     background-color: #99E755;
     /* background-image: linear-gradient( #282A36, #99E755); */
     color: var(--primary-black);
-    margin-top: 0.5rem;
     padding: 2rem 0rem;
     
     width:100%;
@@ -53,9 +52,6 @@
 }
 
 @media (max-width:750px){
-  .Footer {
-    margin-top:5em;
-  }
   .SocialMediaSection {
     padding: 25px 50px;
   }
@@ -73,18 +69,11 @@
   }
 }
 
-@media (max-width:550px){
-  .SocialMediaSection {
-    padding: 20px 25px;
-  }
-}
-
 @media (max-width:500px){
   .Footer {
     display:block;
     padding:0em;
     height: 9em;
-    margin-top: 10em;
   }
 
   .SocialMediaSection {
